--- a/Css/cabecalho.css
+++ b/Css/cabecalho.css
@@ -86,12 +86,47 @@ nav a:hover{
 
 }
 
-@media screen and (min-width: 992px){
+@media screen and (max-width: 768px){
     .cabecalho{
         justify-content: space-between;
-        padding: 0 5rem;
+        padding: 2rem 2rem;
+        
     }
     .logo{
         display: block;
+    }
+
+    .botao__mobile{
+        display: block;
+        border: none;
+        z-index: 101;
+        background: none;
+        cursor: pointer;
+    }
+
+    .menu__navegacao{
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        right: 0;
+        top: 0;
+        background-color: antiquewhite;
+        height: 100vh;
+        z-index: 100;
+        padding-top: 6rem;
+        transition: .5s ease-in-out;
+        width: 100%;
+        max-width: 250px;
+    }
+
+    .menu__item{
+        text-align: center;
+        margin-bottom: 3rem;
+        padding-top: 3rem;
+
+    }
+
+    .menu__navegacao.active{
+        right: -300px;
     }
 }
